✨ Add ratio to img to fix cumulative layout shift

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,8 +4,18 @@
 @import "~bootstrap/scss/bootstrap";
 
 // Custom styles
-.img-cover {
+.ratio-img {
+  height: 0;
   min-width: 230px;
+  padding-top: 62%;
+  position: relative;
+  overflow: hidden;
+}
+
+.ratio-img > img {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .warn {
